#
# MIT License
# Copyright (c) 2018 James, https://github.com/zhuguangxiang
#

INCLUDE(${PROJECT_SOURCE_DIR}/cmake/llvm.cmake)

SET(JIT_SOURCES
  jit_llvm.c jit.c)

SET(BACKUP_PREFIX ${CMAKE_SHARED_LIBRARY_PREFIX})
#SET(CMAKE_SHARED_LIBRARY_PREFIX )

ADD_LIBRARY(jit_so SHARED ${JIT_SOURCES})
TARGET_LINK_LIBRARIES(jit_so ${llvm_libs})
SET_TARGET_PROPERTIES(jit_so PROPERTIES
  VERSION ${KOALA_VERSION}
  SOVERSION ${KOALA_VERSION_MAJOR}
  OUTPUT_NAME jit)

INSTALL(TARGETS jit_so DESTINATION koala-${KOALA_VERSION_MAIN}/lib)

#SET(CMAKE_SHARED_LIBRARY_PREFIX ${BACKUP_PREFIX})